resources/OSSM3/istio-ingress2/istioIngressGateway2.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway2
spec:
  type: ClusterIP
  selector:
    istio: istio-ingressgateway2
  ports:
  - name: status-port # for tempo
    port: 15021
  - name: http2
    port: 80
    targetPort: 8080
  - name: https
    port: 443
    targetPort: 8443
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: istio-ingressgateway2
spec:
  to:
    kind: Service
    name: istio-ingressgateway2
  port:
    targetPort: http2
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-ingressgateway2
spec:
  selector:
    matchLabels:
      istio: istio-ingressgateway2
  template:
    metadata:
      annotations:
        # Select the gateway injection template (rather than the default sidecar template)
        inject.istio.io/templates: gateway
      labels:
        # for kiali to be able to discover the ingress
        app: istio-ingressgateway2
        # Set a unique label for the gateway. This is required to ensure Gateways can select this workload
        istio: istio-ingressgateway2
        # Enable gateway injection. If connecting to a revisioned control plane, replace with "istio.io/rev: revision-name"
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: istio-proxy
        image: auto
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gatewayingress
spec:
  podSelector:
    matchLabels:
      istio: istio-ingressgateway2
  ingress:
    - {}
  policyTypes:
  - Ingress
